[package]
name = "gwrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clokwerk = "0.4.0"
rodio = "0.17.3"
tokio = { version = "1.33.0", features = ["time", "rt", "macros", "rt-multi-thread"] }
