[package]
name = "gwrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.5.2", features = ["derive"] }
clokwerk = "0.4.0"
colored = "2.0.4"
csv = "1.3.0"
dashmap = "5.5.3"
fitrs = "0.5.0"
git-version = "0.3.9"
indicatif = "0.17.7"
midir = "0.9.1"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
rodio = "0.17.3"
scraper = "0.19.0"
serde = { version = "1.0.191", features = ["serde_derive"] }
serde_json = "1.0.114"
